--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.24",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
     "dotenv": "^16.0.0",
     "firebase": "^9.6.10",
     "react": "^17.0.2",
@@ -23,6 +27,8 @@
     "reselect": "^4.1.5",
     "stripe": "^8.216.0",
     "styled-components": "^5.3.5",
+    "typed-redux-saga": "^1.4.0",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +56,8 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
+    "babel-plugin-macros": "^3.1.0",
     "sass": "^1.49.9"
   }
 }
